# ai-efficiency-control-tower

./: .coverage 10  .coverage 11  .coverage 12  .coverage 13  .coverage 16  .coverage 17  .coverage 18  .coverage 19  .coverage 2  .coverage 20  .coverage 21  .coverage 23  .coverage 24  .coverage 26  .coverage 27  .coverage 28  .coverage 29  .coverage 3  .coverage 30  .coverage 33  .coverage 4  .coverage 5  .coverage 7  .coverage 8  .coverage 9  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  learning-log.md  mypy.ini  openapi.json  (+3 more)
.github/workflows/: ci.yml
config/: roi_config.toml  stack_options.toml  zone_thresholds.yaml
docs/: ai-bom.md  ai-decision-framework.md  ai_vs_automation_matrix.md  architecture.md  demo-script.md  interview-qa.md  known_limitations.md  limitations.md  owasp-llm-checklist.md  peak-optimization-roadmap.md  phase-f-kickoff.md  roadmap-v2.md  sbom.json  threat-model.md
docs/adr/: 0001-toolchain-und-project-setup.md  0002-hexagonale-architektur.md  0003-llm-strategie-und-provider.md  0005-llm-port-messages-api.md  0006-prompt-loader-and-sharpening.md  0007-llm-resilience.md  0008-function-calling-tool-layer.md  0009-function-calling-loop.md  0010-azure-openai-adapter.md  0011-report-renderer.md  0012-sharpened-proposal-persistence.md  0013-structured-llm-output-schema.md  0014-rag-retrieval-kontrakt.md  0015-embedding-kontrakt.md  0016-lokaler-embedding-adapter.md  0017-paragraph-chunker.md  0018-chromadb-container.md  0019-chroma-retriever.md  0020-eu-ai-act-recheck-und-einordnung.md  0021-knowledge-base-citation-convention.md  0022-kb-live-indexing.md  0023-retrieval-citation-metadata-passthrough.md  0024-rag-grounded-compliance-hints.md  0025-chroma-retriever-di-wiring.md  0026-compliance-hints-persistence.md  0027-hybrid-search-bm25-rrf.md  0028-cross-encoder-reranking.md  0029-eval-case-format.md  0030-eval-runner-report-format.md  0031-score-breakdown-diagnostik.md  0032-eval-gate-mechanik.md  0033-opentelemetry-distributed-tracing.md  0034-semantic-caching-model-routing.md  0035-azure-container-apps-deploy.md  0036-konfidenz-score-statt-uncertain-zone.md  0037-async-repository-via-to-thread.md  0038-dsgvo-art17-loeschpfad-kaskadiert.md  0039-l3-dedup-embedding-similarity-intake.md  0040-sqlite-chroma-skalierungsgrenze.md  0041-key-vault-settings-source.md  (+23 more)
docs/analysis/: rule-engine-vs-human-judgment.md
docs/career/: cv-bullets.md  linkedin-case-study.md
docs/reviews/: adr-review.md  comprehensive-audit-2026-06.md  master-audit-h-summary.md  master-audit-h.md  phase-a-review.md  phase-b-review.md  phase-c-review.md  phase-d-review.md  phase-e-review.md  phase-f-review.md  phase-g-audit.md  phase-g-review.md  v3-cold-eyes-audit.md
docs/runbooks/: incident-log.md  incident-response.md  secret-compromise.md
docs/screenshots/: README.md
docs/sdr/: SDR-0003-v4-scope.md
evals/golden/: inter_annotator_report.md  report.json  score_breakdown.json  second_annotator_labels.jsonl  use_cases.jsonl
evals/synthetic/: report.json  use_cases.jsonl
frontend/: .gitignore  CLAUDE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: README.md  discontinue-dialog.spec.ts  intake-review-step.spec.ts  lang-switch-guard.spec.ts  nav-layout.spec.ts  public-visibility.spec.ts  smoke.spec.ts
frontend/messages/: de.json  en.json
frontend/scripts/: check-i18n-parity.mjs  check-i18n-usage.mjs
knowledge_base/: README.md  dsgvo-art-17-loeschung.md  dsgvo-art-22-automatisierte-entscheidung.md  dsgvo-art-28-auftragsverarbeiter.md  dsgvo-art-30-verzeichnis.md  dsgvo-art-35-dsfa.md  dsgvo-art-6-rechtsgrundlage.md  dsgvo-art-9-besondere-kategorien.md  eu-ai-act-annex-iii-hochrisiko.md  eu-ai-act-art-5-verbotene-praktiken.md  eu-ai-act-art-50-transparenz.md
notes/: index.md  project-state-analysis.md
notes/daily/: 2026-05-05-day-01.md  2026-05-05-day-18.md  2026-05-06-day-02.md  2026-05-06-day-04.md  2026-05-06-day-05.md  2026-05-07-day-03.md  2026-05-07-day-06.md  2026-05-07-day-07.md  2026-05-08-day-08.md  2026-05-08-day-09.md  2026-05-08-day-10.md  2026-05-08-day-11.md  2026-06-05-day-12.md  2026-06-05-day-13.md  2026-06-05-day-14.md  2026-06-05-day-15.md  2026-06-05-day-16.md  2026-06-05-day-17.md  2026-06-07-day-19.md  2026-06-09-day-20.md  2026-06-10-day-21.md  2026-06-10-day-22.md  2026-06-10-day-23.md  2026-06-10-day-24.md  2026-06-11-day-25.md  2026-06-11-day-26.md  2026-06-11-day-27.md  2026-06-12-day-28.md  2026-06-12-day-29.md  2026-06-12-day-30.md  2026-06-12-day-32.md  2026-06-13-day-31.md  2026-06-13-day-33.md  2026-06-13-day-34.md  2026-06-13-day-35.md  2026-06-13-day-36.md  2026-06-13-day-37.md  2026-06-13-day-38.md  2026-06-13-day-39.md  (+50 more)
scripts/: demo.sh  demo_payload.json  dump_prompts.py  enforce_retention.py  export_openapi.py  gate_check_phase_d.py  generate_synthetic_cases.py  hash_password.py  pin_ci_actions.py  run_demo.py  run_golden_eval.py  run_score_breakdown.py  run_synthetic_eval.py  seed_demo.py  seed_knowledge_base.py
tests/: __init__.py  conftest.py  test_demo_payload.py  test_scoring_explanation_drift.py  test_settings_isolation.py  test_smoke.py
(+288 files in other folders)
