[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/aect"]

[tool.hatch.build.targets.editable]
packages = ["src/aect"]

[project]
name = "aect"
version = "0.1.0"
description = "AI Efficiency Control Tower — AI Use Case Intake & Triage Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "idna>=3.15",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "slowapi>=0.1.9",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "coverage>=7.13.5",
    "bandit[toml]>=1.8",
    "pip-audit>=2.7",
    "hypothesis>=6.152.4",
    "types-pyyaml>=6.0.12.20260518",
    "pytest-asyncio>=1.3.0",
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "coverage[toml]>=7.5.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "RUF002",  # Unicode-Mathesymbole (x, -) in Docstrings erlaubt
    "RUF003",  # Unicode-Mathesymbole (x, -) in Kommentaren erlaubt
]

[tool.ruff.lint.isort]
known-first-party = ["aect"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src/aect",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/aect"]
branch = true
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.\\s*$",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
